# frogsay-rust

./: .travis.yml  Cargo.toml  Cross.toml  LICENSE  README.md  appveyor.yml
chocolately/: frogsay.nuspec
chocolately/tools/: LICENSE.txt  VERIFICATION.txt  chocolateyinstall.ps1  chocolateyuninstall.ps1
ci/: before_deploy.ps1  before_deploy.sh  script.sh
src/: errors.rs  main.rs  pond.rs  private_path.rs  reservoir.rs  speech.rs  tips.rs
txt/: essential.json
